devex-1147: fix case msg's supervisors view of message menu first item w/ message count; fix spacing for usa-nav__submenu-items

--- a/web-client/src/styles/nav.scss
+++ b/web-client/src/styles/nav.scss
@@ -228,8 +228,16 @@
           }
 
           .usa-nav__submenu {
-            background-color: color($theme-color-primary);
             padding: 1rem;
+            background-color: color($theme-color-primary);
+
+            .usa-nav__submenu-item:not(:first-child) {
+              margin-top: 0.75rem;
+            }
+
+            a {
+              padding: 0;
+            }
 
             /* this is for buttons in submenus that should be styled the same as links in submenus */
             .usa-nav__submenu-item button {
@@ -247,6 +255,10 @@
               right: 0;
               width: 110px;
               text-align: right;
+            }
+
+            #my-messages-btn {
+              display: inline-block;
             }
           }
         }
@@ -285,11 +297,6 @@
         justify-content: space-between;
       }
     }
-  }
-
-  #my-messages-btn,
-  #my-qc-btn {
-    font-size: 0.93rem;
   }
 }
 
